# GameOfLife

./: .gitignore  .gitmodules  README.md  script_build.sh  script_git.sh
GameOfLife/: GameOfLife.vcxproj  animal.cpp  grass.h  human.cpp  turtle.h
GameOfLife/GameOfLife/x64/Debug/: GameOfLife.exe.recipe  GameOfLife.ilk
GameOfLife/GameOfLife/x64/Debug/GameOfLife.tlog/: link.secondary.1.tlog  link.write.1.tlog
GameOfLife_Cpp/: .gitignore  TODO.txt
GameOfLife_Cpp/source/: CMakeLists.txt
GameOfLife_Cpp/source/Filenames/: organisms.txt
GameOfLife_Cpp/source/include/: animal.hpp  antelope.hpp  belladonna.hpp  cyber_sheep.hpp  fox.hpp  grass.hpp  guarana.hpp  human.hpp  organism.hpp  plant.hpp  sheep.hpp  sosnowsky_hogweed.hpp  sow_thistle.hpp  turtle.hpp  wolf.hpp  world.hpp
GameOfLife_Cpp/source/src/: animal.cpp  antelope.cpp  belladonna.cpp  cyber_sheep.cpp  fox.cpp  grass.cpp  guarana.cpp  human.cpp  main.cpp  organism.cpp  plant.cpp  sheep.cpp  sosnowsky_hogweed.cpp  sow_thistle.cpp  turtle.cpp  wolf.cpp  world.cpp
GameOfLife__Cpp/: animal.cpp  animal.h  antelope.h  cyber_sheep.cpp  cyber_sheep.h  human.cpp  main.cpp  organism.cpp  organism.h  plant.cpp  plant.h  sheep.cpp  world.cpp  world.h
GameOfLife__Cpp/filenames/: board.txt  organisms.txt
Game_Of_Life_Cpp/: .gitignore  GameOfLife.sln  GameOfLife.vcxproj.filters  animal.cpp  animal.h  antelope.cpp  belladonna.cpp  belladonna.h  cyber_sheep.cpp  fox.cpp  fox.h  grass.cpp  guarana.cpp  guarana.h  human.cpp  human.h  main.cpp  organism.h  plant.cpp  plant.h  sheep.h  sosnowsky_hogweed.cpp  sosnowsky_hogweed.h  sow_thistle.cpp  sow_thistle.h  turtle.cpp  wolf.cpp  wolf.h  world.cpp  world.h
Game_Of_Life_Cpp/GameOfLife/x64/Debug/: vc143.idb
Game_Of_Life_Cpp/GameOfLife/x64/Debug/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameOfLife.lastbuildstate  link.command.1.tlog  link.read.1.tlog
Game_Of_Life_Cpp/filenames/: b.txt  board.txt  o.txt  or.txt  organisms.txt
Game_Of_Life_Cpp/source/include/: animal.h  human.h  organism.h  plant.h  world.h
Game_Of_Life_Cpp/source/src/: animal.cpp  human.cpp  main.cpp  organism.cpp  plant.cpp  world.cpp
Game_Of_Life_Python/: helper.py  journal.txt  main.py  organisms.txt  world.py
Game_Of_Life_Python/Organisms/: animal.py  organism.py  plant.py
Game_Of_Life_Python/Organisms/Animals/: animal.py  antelope.py  cyber_sheep.py  fox.py  human.py  sheep.py  turtle.py  wolf.py
Game_Of_Life_Python/Organisms/Plants/: belladonna.py  grass.py  guarana.py  plant.py  sosnowsky_hogweed.py  sow_thistle.py
source/: CMakeLists.txt
source/include/: animal.h  human.h  organism.h  organism_info.h  plant.h  world.h
source/src/: CMakeLists.txt  animal.cpp  human.cpp  main.cpp  organism.cpp  organism_info.cpp  plant.cpp  world.cpp
